# TikTokMusicViewer

./: CHANGELOG.md  CMakeLists.txt  README.md  config.json  musicList_0
.github/workflows/: build.yml
source/: ImGuiHandler.cpp  ImGuiHandler.h  Main.cpp
source/components/: ImageComponent.cpp  ImageComponent.h  SoundComponent.cpp  SoundComponent.h  VolumeComponent.cpp  VolumeComponent.h
source/screens/: AboutScreen.cpp  AboutScreen.h  ExtrasScreen.cpp  ExtrasScreen.h  MainScreen.cpp  MainScreen.h  SettingsScreen.cpp  SettingsScreen.h
source/tiktok/: ApiManager.cpp  ApiManager.h
source/utils/: Config.cpp  Config.h  DataStore.cpp  DataStore.h  File.h  ImGuiExtensions.h  Text.h
